# CatMouseOptimizer

./: pyproject.toml
src/cat-mouse/: __init__.py  cmbo.py
