[project]
name = "cat-mouse"
version = "0.0.1"
authors = [
  { name="Navya Newatia", email="newatian@gmail.com" },
]
description = "Cat and mouse based algorithm implementation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/navy356/catmouse"
"Bug Tracker" = "https://github.com/navy356/catmouse/issues"